--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.474.0",
     "next": "^15.1.4",
     "next-route-handler-pipe": "^1.0.5",
+    "openai": "^4.96.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.8",
