--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -31,3 +31,14 @@ entrypoint = "./functions/generate_book/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/generate_book/*.html" ]
+
+[functions.generate_story_images]
+enabled = true
+verify_jwt = true
+import_map = "./functions/generate_story_images/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/generate_story_images/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/generate_story_images/*.html" ]
