--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.474.0",
     "next": "^15.1.4",
     "next-route-handler-pipe": "^1.0.5",
